@@ -10,15 +10,17 @@ AUX live-recursive.patch 433 RMD160 f70734114f7423f48693f71c5b0f0ae85c337090 SHA
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2009.09.28.tar.gz 449508 RMD160 c25cb1a2377f0fe6c3817bbc3edbcd4daa57d0dc SHA1 e5657206976f592e3fd1fda9cfe77b5712498784 SHA256 0e84700e8982ac5472723c0327131c179512d4b99fe0c4ae903cfe08a1a0e03c
 DIST live.2009.11.12.tar.gz 449650 RMD160 ef21d2b72aaf2044c9e96cadfe62cc1304d89843 SHA1 14830984d85ef710835d5e9c26ebb626b66c0260 SHA256 f6ee9c1079b5ab8e330c9edd7634bcffd76eb434cf52fe2ea06c4072bf823645
+DIST live.2010.04.09.tar.gz 452846 RMD160 3ee1d0c767e139e3d7cc66fd6409404e625dee73 SHA1 3c480355b153847273b30f0ce30cf80dff12e170 SHA256 e9539f59058cb885f28ac48cdce285f8a0fe567c4aa889c2ac3bd0638b007944
 EBUILD live-2009.06.02.ebuild 2547 RMD160 0f43b19c53d4c6be7f4643a961ba32a83a7ede5d SHA1 88e01d0a3498a6439249270deb4d642ab8cb4737 SHA256 8cbd9d36063f2acfe7728bcc2ad4dd8112b4fd9993caf60e03547fea0ab88bc3
 EBUILD live-2009.09.28.ebuild 2534 RMD160 94e6c28e16926040e2295d4cfe51dd5a4bcba4bd SHA1 cb13c5ccdf07cac07f8bafb4a91d033e136bee6e SHA256 bebe47d33036bf28d89fd3a5c365eb76aa8885e738a7af02320c8bca98cf2f8c
 EBUILD live-2009.11.12.ebuild 2513 RMD160 c1293171f7798ab32aa03a7fe63ed45540af8d5c SHA1 5c47796e9e96223f0079aec84df38237394c6b9d SHA256 ffcb29f699392b4a1d5ce0d82c5615d346dd8cfece0e0171391e23881ef1b933
-MISC ChangeLog 16421 RMD160 16df49dd4d6ba6d1ebc160ed339b06037e4e8d91 SHA1 698b802518240723da8cf87f8025805651f1ec9f SHA256 e1e3259e368500afd107cb6cfee3e83114c2c2dbe7170a03eae5c036684b4362
+EBUILD live-2010.04.09.ebuild 3796 RMD160 12e4c949a4666a1a33863c635dd36c538c5d87c1 SHA1 25a31e5fb807a095404dee45e9dbac68ea506a75 SHA256 a18512d61b618bd093de2a42f3f8631bd36e69d6953493aa239834fb65ccc7b0
+MISC ChangeLog 16663 RMD160 ed952af1e0500e86000b1c838a03dffe0f5c2422 SHA1 01d1172d358ace51eb0e24c236e37b9416c21814 SHA256 699597a4f6678482c2421be8aa03bc749b894cd9210ded55a74769ed75c6171c
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkue4MsACgkQni8M22OVw8CNIQCfSRgGQyVI6Dbr4kQhULz5dSkU
-bFoAoIYS6lvkvB/CpsBQ8NUtF2ZUVHD0
-=6Air
+iEYEARECAAYFAkxujSYACgkQni8M22OVw8CLjwCgjyYrhOM7RY6MV5jmXX+akt0Q
+buwAn3wAHd3/yzLLHeWi08dRydF541ni
+=vHZT
 -----END PGP SIGNATURE-----
