@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $
 
+  20 Aug 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> +live-2010.04.09.ebuild:
+  Bumped to live-2010.04.09, attempting to follow changes for the
+  corresponding bump in portage. Need for bump reported by geos_one.
+
   16 Mar 2010; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> -live-2008.09.02.ebuild,
   live-2009.06.02.ebuild, +files/live-2009.06.02-as-needed.patch,
